# Adaptive-rag

./: .dockerignore  .env.example  .gitignore  DAY1_ACCEPTANCE.md  NOTICE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: compare_dense_hybrid.py  compare_rrf_rerank.py  day1_smoke_test.py  day2_acceptance.py  generate_builtin_pdf.py
backend/src/: __init__.py  app.py  config.py  main.py
backend/src/agent/: __init__.py  failures.py  graph.py  (+3 more)
backend/tests/: __init__.py  fakes.py  test_agent_contracts.py  test_agent_graph.py  test_agent_rag_nodes.py  test_agent_rewrite.py  test_agent_router.py  test_api_chat_disconnect.py  test_api_chat_stream.py  test_api_documents.py  test_api_health.py  test_app_lifespan.py  test_bm25_index.py  test_bm25_retriever.py  test_builtin_knowledge.py  test_chroma_vectorstore.py  test_chunkers.py  test_config.py  test_context_builder.py  test_day1_e2e.py  test_day5_acceptance_integration.py  test_day5_rerank_sample.py  test_embedding_client.py  test_evaluation_dataset.py  test_evaluation_metrics.py  test_evaluation_runner.py  test_hybrid_agent_graph.py  test_hybrid_quality_cases.py  test_ingestion.py  test_langfuse.py  test_langfuse_smoke.py  test_langfuse_tracing.py  test_llm_client.py  test_llm_streaming.py  test_llm_structured_smoke.py  test_parsers.py  test_rag_service.py  test_reranker.py  test_reranker_smoke.py  test_retrieval.py  (+8 more)
frontend/: Dockerfile  api_client.py  app.py  pyproject.toml  sse.py  state.py
frontend/tests/: test_api_client.py  test_app.py  test_sse.py  test_state.py
(+174 files in other folders)
