[project]
name = "adaptive-rag-backend"
version = "0.1.0"
description = "Backend components for the Adaptive RAG project"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0,<2",
    "jieba>=0.42.1,<1",
    "langgraph>=0.3,<2",
    "openai>=1.0,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pymupdf>=1.24,<2",
    "rank-bm25>=0.2.2,<1",
]

[project.optional-dependencies]
observability = [
    "langfuse>=4.7,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
markers = [
    "external_llm: opt-in tests that call the configured external LLM API",
    "external_langfuse: opt-in test that sends one sanitized Langfuse trace",
    "external_reranker: opt-in test that calls the configured reranker API",
]
