[project]
name = "adaptive-rag-frontend"
version = "0.1.0"
description = "Streamlit demo frontend for the Adaptive RAG API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "streamlit>=1.40,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
